Fixed style issue on Windows that was causing the vertical scrollbar from needlessly rendering in the executing pane

--- a/packages/selenium-ide/src/neo/components/TestList/style.css
+++ b/packages/selenium-ide/src/neo/components/TestList/style.css
@@ -1,7 +1,7 @@
 .tests {
   max-height: 0;
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
   transition: max-height 300ms linear;
   list-style: none;
 }
